--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="default_margin">10dp</dimen>
     <dimen name="bottom_sheet_peek_height">50dp</dimen>
     <dimen name="fab_bottom_margin">60dp</dimen>
+    <dimen name="stroke_width_default">2dp</dimen>
+    <dimen name="stroke_width_focused">3dp</dimen>
 </resources>
