--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/fog"
     android:focusableInTouchMode="true"
     tools:context=".ui.FragmentMain">
 
@@ -13,6 +14,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_edit"
+            style="@style/outline_text_input_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/default_hint"
@@ -22,6 +24,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
+                style="@style/outline_text_input_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/default_text" />
