--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -42,6 +42,15 @@
             app:layout_constraintTop_toBottomOf="@+id/text_edit" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/default_margin"
+            android:src="@drawable/ic_icons_tab_96"
+            app:layout_constraintBottom_toTopOf="@+id/btn_floating_chips"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_floating_chips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
