--- a/app/src/main/res/layout/fragment_earth.xml
+++ b/app/src/main/res/layout/fragment_earth.xml
@@ -6,6 +6,7 @@
     tools:context=".ui.FragmentEarth">
 
     <ImageView
+        android:id="@+id/img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/ic_earth"/>
