--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -45,9 +45,11 @@
             android:id="@+id/btn_tab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/default_margin"
             android:src="@drawable/ic_icons_tab_96"
             app:layout_constraintBottom_toTopOf="@+id/btn_floating_chips"
+            app:layout_constraintCircle="@+id/btn_floating_chips"
+            app:layout_constraintCircleAngle="@integer/constraint_circle_angle"
+            app:layout_constraintCircleRadius="@dimen/constraint_circle_radius"
             app:layout_constraintRight_toRightOf="parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
