--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -54,6 +54,19 @@
             app:layout_constraintCircleRadius="@dimen/constraint_circle_radius"
             app:layout_constraintRight_toRightOf="parent" />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_mountains"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/default_margin"
+            android:layout_marginBottom="@dimen/default_margin"
+            android:src="@drawable/ic_ico_triangle"
+            app:layout_constraintBottom_toTopOf="@id/guideline"
+            app:layout_constraintCircle="@+id/btn_floating_chips"
+            app:layout_constraintCircleAngle="@integer/constraint_circle"
+            app:layout_constraintCircleRadius="@dimen/constraint_circle_radius"
+            app:layout_constraintRight_toRightOf="parent" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
             android:layout_width="wrap_content"
