поэкспериментировал со свойствами exitUntilCollapsed, snap, enterAlways

--- a/app/src/main/res/layout/activity_collapsing_toolbar.xml
+++ b/app/src/main/res/layout/activity_collapsing_toolbar.xml
@@ -21,6 +21,8 @@
             app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:title="@string/app_name">
+            <!--scroll|snap -->
+            <!--scroll|enterAlways-->
 
             <ImageView
                 android:id="@+id/main.backdrop"
