--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -49,8 +49,8 @@
             android:layout_marginBottom="@dimen/default_margin"
             android:src="@drawable/ic_icons_tab_96"
             app:layout_constraintBottom_toTopOf="@id/guideline"
-            app:layout_constraintCircle="@+id/btn_floating_chips"
-            app:layout_constraintCircleAngle="@integer/constraint_circle_angle"
+            app:layout_constraintCircle="@+id/btn_stop"
+            app:layout_constraintCircleAngle="@integer/circle_angle_tab"
             app:layout_constraintCircleRadius="@dimen/constraint_circle_radius"
             app:layout_constraintRight_toRightOf="parent" />
 
@@ -62,8 +62,8 @@
             android:layout_marginBottom="@dimen/default_margin"
             android:src="@drawable/ic_ico_triangle"
             app:layout_constraintBottom_toTopOf="@id/guideline"
-            app:layout_constraintCircle="@+id/btn_floating_chips"
-            app:layout_constraintCircleAngle="@integer/constraint_circle"
+            app:layout_constraintCircle="@+id/btn_stop"
+            app:layout_constraintCircleAngle="@integer/circle_angle_mountains"
             app:layout_constraintCircleRadius="@dimen/constraint_circle_radius"
             app:layout_constraintRight_toRightOf="parent" />
 
@@ -80,6 +80,18 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/default_margin"
             android:src="@drawable/ic_free_icon_chips_bag_100"
+            app:layout_constraintCircle="@+id/btn_stop"
+            app:layout_constraintCircleAngle="@integer/circle_angle_chips"
+            app:layout_constraintCircleRadius="@dimen/constraint_circle_radius"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/guideline" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_stop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/default_margin"
+            android:src="@drawable/ic_baseline_back_hand_24"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guideline" />
 
