--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -61,11 +61,8 @@
             android:layout_marginEnd="@dimen/default_margin"
             android:layout_marginBottom="@dimen/default_margin"
             android:src="@drawable/ic_ico_triangle"
-            app:layout_constraintBottom_toTopOf="@id/guideline"
-            app:layout_constraintCircle="@+id/btn_stop"
-            app:layout_constraintCircleAngle="@integer/circle_angle_mountains"
-            app:layout_constraintCircleRadius="@dimen/constraint_circle_radius"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/guideline" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
@@ -80,9 +77,6 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/default_margin"
             android:src="@drawable/ic_free_icon_chips_bag_100"
-            app:layout_constraintCircle="@+id/btn_stop"
-            app:layout_constraintCircleAngle="@integer/circle_angle_chips"
-            app:layout_constraintCircleRadius="@dimen/constraint_circle_radius"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guideline" />
 
@@ -91,12 +85,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/default_margin"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/guideline" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/img_btn_stop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/hand_margin_top"
+            android:layout_marginEnd="@dimen/hand_margin_end"
+            android:elevation="10dp"
             android:src="@drawable/ic_baseline_back_hand_24"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guideline" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <include layout="@layout/bottom_sheet" />
+    <include
+        android:id="@+id/bottom_sheet"
+        layout="@layout/bottom_sheet" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
