--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="default_margin">10dp</dimen>
+    <dimen name="hand_margin_top">15dp</dimen>
+    <dimen name="hand_margin_end">25dp</dimen>
     <dimen name="bottom_sheet_peek_height">50dp</dimen>
     <dimen name="fab_bottom_margin">60dp</dimen>
     <dimen name="stroke_width_default">2dp</dimen>
