--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,12 +15,12 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_edit"
             style="@style/outline_text_input_layout"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/default_hint"
             app:endIconMode="clear_text"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/icon_recyclerview"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -30,6 +30,18 @@
                 android:text="@string/default_text" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/icon_recyclerview"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/margin_icon_recyclerview_top"
+            app:icon="@drawable/ic_baseline_format_list_bulleted_24"
+            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
+            app:layout_constraintBottom_toBottomOf="@+id/text_edit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/text_edit"
+            app:layout_constraintTop_toTopOf="@+id/text_edit" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img"
