--- a/app/src/main/res/layout/recycler_item_edit.xml
+++ b/app/src/main/res/layout/recycler_item_edit.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/marsImageView"
+        android:id="@+id/edit_image_view"
         android:layout_width="120dp"
         android:layout_height="120dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -16,16 +16,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/item_edit_header"
-        android:textSize="35sp"
+        android:textColor="@color/purple_700"
+        android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/marsImageView"
-        app:layout_constraintStart_toEndOf="@+id/marsImageView"
-        app:layout_constraintTop_toTopOf="@+id/marsImageView" />
+        app:layout_constraintBottom_toBottomOf="@+id/edit_image_view"
+        app:layout_constraintStart_toEndOf="@+id/edit_image_view"
+        app:layout_constraintTop_toTopOf="@+id/edit_image_view" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="#000"
-        app:layout_constraintBottom_toBottomOf="@+id/marsImageView"
+        app:layout_constraintBottom_toBottomOf="@+id/edit_image_view"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
