--- a/app/src/main/res/layout/recycler_item_view.xml
+++ b/app/src/main/res/layout/recycler_item_view.xml
@@ -5,26 +5,27 @@
     android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/earthImageView"
+        android:id="@+id/image_view"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_notes_50" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/item_view_header"
-        android:textSize="35sp"
+        android:textColor="@color/teal_700"
+        android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/earthImageView"
-        app:layout_constraintEnd_toStartOf="@+id/earthImageView"
-        app:layout_constraintTop_toTopOf="@+id/earthImageView" />
+        app:layout_constraintBottom_toBottomOf="@+id/image_view"
+        app:layout_constraintStart_toEndOf="@+id/image_view"
+        app:layout_constraintTop_toTopOf="@+id/image_view" />
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/wikiImageView"
+        android:id="@+id/logo_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
@@ -33,28 +34,28 @@
         app:srcCompat="@drawable/ic_baseline_search_24" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/descriptionTextView"
+        android:id="@+id/description_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/item_view_body"
-        android:textColor="#000"
+        android:textColor="@color/wave"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@+id/earthImageView"
+        app:layout_constraintBottom_toBottomOf="@+id/image_view"
         app:layout_constraintEnd_toStartOf="@+id/barrier"
-        app:layout_constraintStart_toEndOf="@+id/earthImageView"
-        app:layout_constraintTop_toTopOf="@+id/earthImageView" />
+        app:layout_constraintStart_toEndOf="@+id/image_view"
+        app:layout_constraintTop_toTopOf="@+id/header" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="end"
-        app:constraint_referenced_ids="wikiImageView" />
+        app:constraint_referenced_ids="logo_image_view" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="#000"
-        app:layout_constraintBottom_toBottomOf="@+id/earthImageView"
+        app:layout_constraintBottom_toBottomOf="@+id/image_view"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
