--- a/app/src/main/res/layout/recycler_item_view.xml
+++ b/app/src/main/res/layout/recycler_item_view.xml
@@ -12,17 +12,39 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_notes_50" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/header"
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:barrierDirection="end"
+        app:constraint_referenced_ids="image_view" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/header"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:maxLines="3"
+        android:singleLine="false"
         android:text="@string/item_view_header"
         android:textColor="@color/teal_700"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/image_view"
-        app:layout_constraintStart_toEndOf="@+id/image_view"
+        app:layout_constraintEnd_toStartOf="@+id/barrier"
+        app:layout_constraintStart_toEndOf="@+id/barrier_text"
         app:layout_constraintTop_toTopOf="@+id/image_view" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/description_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/item_view_body"
+        android:textColor="@color/wave"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/barrier"
+        app:layout_constraintStart_toEndOf="@+id/barrier_text"
+        app:layout_constraintTop_toBottomOf="@+id/header" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/logo_image_view"
@@ -32,18 +54,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_search_24" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/description_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/item_view_body"
-        android:textColor="@color/wave"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@+id/image_view"
-        app:layout_constraintEnd_toStartOf="@+id/barrier"
-        app:layout_constraintStart_toEndOf="@+id/image_view"
-        app:layout_constraintTop_toTopOf="@+id/header" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
