--- a/app/src/main/res/layout/recycler_item_edit.xml
+++ b/app/src/main/res/layout/recycler_item_edit.xml
@@ -23,6 +23,24 @@
         app:layout_constraintStart_toEndOf="@+id/edit_image_view"
         app:layout_constraintTop_toTopOf="@+id/edit_image_view" />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/add_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/delete_item"
+        app:srcCompat="@drawable/ic_baseline_add_24" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/delete_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:srcCompat="@drawable/ic_baseline_delete_outline_24" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
