--- a/app/src/main/res/layout/recycler_item_view.xml
+++ b/app/src/main/res/layout/recycler_item_view.xml
@@ -29,10 +29,10 @@
         android:textColor="@color/teal_700"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/image_view"
-        app:layout_constraintEnd_toStartOf="@+id/barrier"
+        app:layout_constraintBottom_toTopOf="@+id/description_text_view"
+        app:layout_constraintEnd_toStartOf="@+id/up_item"
         app:layout_constraintStart_toEndOf="@+id/barrier_text"
-        app:layout_constraintTop_toTopOf="@+id/image_view" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/description_text_view"
@@ -42,12 +42,12 @@
         android:textColor="@color/wave"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/barrier"
+        app:layout_constraintEnd_toStartOf="@+id/down_item"
         app:layout_constraintStart_toEndOf="@+id/barrier_text"
         app:layout_constraintTop_toBottomOf="@+id/header" />
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/logo_image_view"
+        android:id="@+id/search_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logo_image_view"
+        app:layout_constraintTop_toBottomOf="@id/search_item"
         app:srcCompat="@drawable/ic_baseline_add_24" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -73,12 +73,32 @@
         app:layout_constraintTop_toBottomOf="@id/add_item"
         app:srcCompat="@drawable/ic_baseline_delete_outline_24" />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/up_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        app:layout_constraintEnd_toStartOf="@id/add_item"
+        app:layout_constraintTop_toTopOf="@id/search_item"
+        app:layout_constraintBottom_toBottomOf="@id/add_item"
+        app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/down_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        app:layout_constraintEnd_toStartOf="@id/delete_item"
+        app:layout_constraintTop_toTopOf="@id/add_item"
+        app:layout_constraintBottom_toBottomOf="@id/delete_item"
+        app:srcCompat="@drawable/ic_baseline_arrow_downward_24" />
+
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="end"
-        app:constraint_referenced_ids="logo_image_view" />
+        app:constraint_referenced_ids="search_item" />
 
     <View
         android:layout_width="match_parent"
