--- a/app/src/main/res/layout/recycler_item_edit.xml
+++ b/app/src/main/res/layout/recycler_item_edit.xml
@@ -13,6 +13,7 @@
         app:srcCompat="@drawable/ic_baseline_edit_note_50" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/write_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/item_edit_header"
@@ -20,8 +21,8 @@
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/edit_image_view"
-        app:layout_constraintStart_toEndOf="@+id/edit_image_view"
         app:layout_constraintEnd_toStartOf="@+id/up_item"
+        app:layout_constraintStart_toEndOf="@+id/edit_image_view"
         app:layout_constraintTop_toTopOf="@+id/edit_image_view" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -29,8 +30,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/delete_item"
+        app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_baseline_add_24" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -38,8 +39,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_baseline_delete_outline_24" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -47,8 +48,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        app:layout_constraintEnd_toStartOf="@id/add_item"
         app:layout_constraintBottom_toBottomOf="@id/add_item"
+        app:layout_constraintEnd_toStartOf="@id/add_item"
         app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -56,9 +57,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
+        app:layout_constraintBottom_toBottomOf="@id/delete_item"
         app:layout_constraintEnd_toStartOf="@id/delete_item"
         app:layout_constraintTop_toTopOf="@id/add_item"
-        app:layout_constraintBottom_toBottomOf="@id/delete_item"
         app:srcCompat="@drawable/ic_baseline_arrow_downward_24" />
 
     <View
