--- a/app/src/main/res/layout/recycler_item_view.xml
+++ b/app/src/main/res/layout/recycler_item_view.xml
@@ -47,13 +47,13 @@
         app:layout_constraintTop_toBottomOf="@+id/header" />
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/search_item"
+        android:id="@+id/save_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_search_24" />
+        app:srcCompat="@drawable/ic_baseline_save_24" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/add_item"
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_item"
+        app:layout_constraintTop_toBottomOf="@id/save_item"
         app:srcCompat="@drawable/ic_baseline_add_24" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -73,32 +73,39 @@
         app:layout_constraintTop_toBottomOf="@id/add_item"
         app:srcCompat="@drawable/ic_baseline_delete_outline_24" />
 
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="start"
+        app:constraint_referenced_ids="add_item" />
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/up_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        app:layout_constraintBottom_toBottomOf="@id/add_item"
-        app:layout_constraintEnd_toStartOf="@id/add_item"
-        app:layout_constraintTop_toTopOf="@id/search_item"
+        app:layout_constraintEnd_toStartOf="@id/barrier"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/drag_handle_image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        app:layout_constraintEnd_toStartOf="@id/barrier"
+        app:layout_constraintTop_toBottomOf="@id/up_item"
+        app:srcCompat="@drawable/ic_baseline_view_headline_24_hamburger" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/down_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        app:layout_constraintBottom_toBottomOf="@id/delete_item"
-        app:layout_constraintEnd_toStartOf="@id/delete_item"
-        app:layout_constraintTop_toTopOf="@id/add_item"
+        app:layout_constraintEnd_toStartOf="@id/barrier"
+        app:layout_constraintTop_toBottomOf="@id/drag_handle_image_view"
         app:srcCompat="@drawable/ic_baseline_arrow_downward_24" />
-
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="end"
-        app:constraint_referenced_ids="search_item" />
 
     <View
         android:layout_width="match_parent"
