--- a/app/src/main/res/layout/recycler_item_view.xml
+++ b/app/src/main/res/layout/recycler_item_view.xml
@@ -47,12 +47,21 @@
         app:layout_constraintTop_toBottomOf="@+id/header" />
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/edit_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_edit_24" />
+
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/add_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        app:layout_constraintBottom_toTopOf="@id/delete_item"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edit_item"
         app:srcCompat="@drawable/ic_baseline_add_24" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -60,10 +69,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/add_item"
         app:srcCompat="@drawable/ic_baseline_delete_outline_24" />
-
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
