--- a/app/src/main/res/layout/fragment_chips.xml
+++ b/app/src/main/res/layout/fragment_chips.xml
@@ -176,6 +176,18 @@
         app:layout_constraintTop_toBottomOf="@+id/material_text_view" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/text_big"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_margin="@dimen/default_margin"
+        android:scrollbars="vertical"
+        android:text="@string/big_text"
+        app:layout_constraintBottom_toTopOf="@+id/text_click"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chip_sea_wave_theme" />
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_click"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
